--- a/blog/source/_posts/小店周年庆.md
+++ b/blog/source/_posts/小店周年庆.md
@@ -7,3 +7,30 @@ cover: ../img/wallhaven-1pp7v1.jpg
 description: 庆祝小店开业
 swiper_index: 1 #置顶轮播图顺序，非负整数，数字越大越靠前
 ---
+# 周年庆：
+| 前置  | 步骤      | 结果 |
+|-----|---------| -- |
+| 入口按钮以及跳转   |  |  |
+| 活动开启结束时间  |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+|    |  |  |
+
