--- a/blog/source/_posts/森萤之尽.md
+++ b/blog/source/_posts/森萤之尽.md
@@ -1,15 +1,5 @@
 ---
-layout: 兑换
-title: 森萤之尽
+title: 农场
 date: 2023-02-23 10:50:46
-tags: 兑换活动
-cover: ../img/活动/cover.png
 ---
-## 界面效果
-![](../img/活动/兑换.gif)
-![](../img/活动/签到页面.gif)
-![](../img/活动/礼包封面.png)
-![](../img/活动/活动主界面.gif)
-![](../img/活动/任务界面.gif)
-![](../img/活动/商店页面.png)
-![](../img/活动/右上角礼包图标.png)
+![img_4.png](img_4.png)
