--- a/blog/source/_posts/联盟.md
+++ b/blog/source/_posts/联盟.md
@@ -30,11 +30,27 @@ SetAllianceSelfQuitTimeMs(userID, deltaHours int64)
 //设置联盟展会关卡及进度(center) 
  GMSetAllianceDungeonBossLevelAndScore(asId int32, level int8, curScore int64)
 
+//增加联盟展会次数
+SetAllianeBossFightNum(userID int64, num int32)
+
+//增加退出联盟的时间
+SetAllianceSelfQuitTimeMs(userID, deltaHours int64)
+
+//设置加入时间
+SetUserJoinAllianceMs(userID, deltaHours int64)
+
+//添加联盟等级经验(center) 
+AddAllianceLevelExp(asId int32, exp int64)
 
 {% endfolding %}
 
-{% folding yellow, 联盟相关GM %}
+{% folding yellow, 联盟相关日志查询 %}
+ GmShowAllianceBuffAndBuffRewardFlagMap(asID int32)
 - grep "dealwhitGetAllianceExtrendRewardByBuff" center.log   查询可领取多少粉丝
+
+- grep "itemAddFans.*.P_alliance_pop_fans_req" ./gs1.log -R -n  查询道具加成  不算贵重物
+
+- cat ./gs1.log | grep 'addFansOrigin'  查询粉丝获取  选择题、小游戏、贵重物
 {% endfolding %}
 
 
@@ -44,5 +60,6 @@ SetAllianceSelfQuitTimeMs(userID, deltaHours int64)
   - 推广奖励：AllianceAdvertiseReward
 - 联盟签到
   - 联盟等级对应的打卡奖励：Allianceupgrade
-- 
+- 联盟展会
+  - 每轮的奖励
 {% endfolding %}
